apps/staging/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.robertharte.home
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 80
            path: /
            pathType: Prefix
